# proxy-wasm-rust-sdk

./: .bazelrc  .gitignore  BUILD  DEVELOPMENT.md  MODULE.bazel  WORKSPACE
.bcr/: README.md  metadata.template.json  presubmit.yml
.github/: dependabot.yml
.github/workflows/: rust.yml
bazel/: dependencies.bzl  deps.bzl  extensions.bzl  repositories.bzl  rules_rust.patch
bazel/cargo/remote/: BUILD.bazel  BUILD.log-0.4.28.bazel  BUILD.mockalloc-macros-0.1.0.bazel  BUILD.proc-macro2-1.0.103.bazel  BUILD.quote-1.0.42.bazel  BUILD.syn-1.0.109.bazel  BUILD.unicode-ident-1.0.22.bazel  defs.bzl
