module(
    name = "proxy-wasm-rust-sdk",
    version = "0.0.0",
    repo_name = "proxy_wasm_rust_sdk",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.8.1",
)
bazel_dep(
    name = "platforms",
    version = "1.0.0",
)
bazel_dep(
    name = "rules_cc",
    version = "0.1.0",
)
bazel_dep(
    name = "rules_rust",
    version = "0.63.0",
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2018",
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Crate universe for Rust dependencies
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//bazel/cargo:Cargo.Bazel.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")

# Set up compatibility layer for bzlmod mode
deps = use_extension("//bazel:extensions.bzl", "deps")
use_repo(deps, "proxy_wasm_rust_sdk_deps")
