module(
    name = "proxy-wasm-rust-sdk",
    version = "0.0.0",
    repo_name = "proxy_wasm_rust_sdk",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.8.1",
)
bazel_dep(
    name = "platforms",
    version = "1.0.0",
)
bazel_dep(
    name = "rules_cc",
    version = "0.1.0",
)
bazel_dep(
    name = "rules_rust",
    version = "0.63.0",
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2018",
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Use vendored dependencies for better compatibility and deterministic builds
# The vendored crates are pre-generated in //bazel/cargo/remote and managed via crates_vendor
# This approach provides better WORKSPACE/bzlmod compatibility
